# mode-chain-blocks

./: README.md  pyproject.toml
data/: mode_chain_daily_blocks.csv  mode_chain_daily_blocks.parquet
notebooks/: fetch_blocks_mode_chain.ipynb
