[tool.poetry]
name = "mode-chain-blocks"
version = "0.1.0"
description = ""
authors = ["Jhon Lucas <jhonlucaslife@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.0"
web3 = "^6.15.1"
ipykernel = "^6.29.2"
tqdm = "^4.66.2"
pyarrow = "^15.0.0"
duckdb = "^0.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
